[package]
name = "file4_watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
regex = "1.12.2"
reqwest = "0.12.24"
roxmltree = "0.21.1"
sqlx = { version = "0.8.6", features = ["sqlite"] }
tokio = { version = "1.47.1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
